corrected sidebar collapsed issue

--- a/frontend/src/components/admin/dashboard/dashboard.css
+++ b/frontend/src/components/admin/dashboard/dashboard.css
@@ -7,26 +7,6 @@
 }
 
 
-/* ==========================================
-   SIDEBAR
-========================================== */
-
-.sidebar {
-    background-color: #212529;
-    min-height: 100vh;
-    color: white;
-
-    position: fixed;
-    left: 0;
-    top: 0;
-
-    width: 260px;
-
-    overflow-y: auto;
-
-    z-index: 1000;
-}
-
 
 /* ==========================================
    MAIN CONTENT
